# InitWorkProject

./: .gitignore  CMakeLists.txt  DB Struct.txt  InitialWorkProject.sln
InitialWorkProject/: CMakeLists.txt  D_DataBase.cpp  D_DataBase.h  InitialWorkProject.vcxproj  InitialWorkProject.vcxproj.filters  P_HEADER.cpp  P_HEADER.h  U_DataParser.cpp  U_DataParser.h  U_Main.cpp  W_WebDispatcher.cpp  W_WebDispatcher.h  W_WebServer.cpp  W_WebServer.h  W_WebSession.cpp  W_WebSession.h
Libs/include/CoreToolkit/: Thread.h
Libs/include/WebToolkit/: WebToolkit.h
Libs/lib/: CoreToolkit.lib  WebToolkit.lib  sqlite3.exp  sqlite3.lib
data/: login.css  login.html  main.css  main.html  main_admin.html  nicepage.css
data/requests/: nicepage.css
data/requests/REQUEST_FULL/: nicepage.css  request_full.html
data/requests/REQUEST_JOBQUIT/: request_job_quit.css  request_job_quit.html
data/requests/REQUEST_LITE/: request_lite.css  request_lite.html
